--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="inner">
 						<header>
 							<p>Experience with Award-Winning touring productions</a></p>
-							<h2>Theatre Producing</h2>
+							<h2>Theatre Producer</h2>
 						</header>
 					</div>
 				</article>
@@ -46,7 +46,7 @@
 					<div class="inner">
 						<header>
 							<p>Experienced in Adobe Creative Software including Photoshop & Premiere Pro.</p>
-							<h2>Graphic Design</h2>
+							<h2>Graphic Designer</h2>
 						</header>
 					</div>
 				</article>
