--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jonathan Taylor - Producer</title>
+		<title>Jonathan Taylor Productions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,6 +24,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="projects.html">Projects</a></li>
 					<!--<li><a href="elements.html">Producing</a></li>
 					<li><a href="elements.html">Photography & Design</a></li>\
 					<li><a href="elements.html">Technical Experience</a></li>-->
@@ -34,7 +35,7 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<h2>Contact Me</h2>
+						<h2>Contact</h2>
 					</header>
 				</div>
 			</section>
@@ -44,27 +45,48 @@
 				<div class="inner">
 					<div class="box">
 						<div style="text-align: center" class="content">
-							<p>I am always available to meet new people and learn about new projects. If you believe there is a project that would be perfect for me, I would love to hear from you. Get in touch by sending me an email, or DMing me on Twitter.</p>
-							<p>If you would like to hire me for casual Graphic Design, Photography, or Technician work then send me an email and I will be able to get back to you.</P>
+							<h2>Jonathan Taylor</h2>
+							<p>Jonathan Taylor is a freelance theatre producer, with an eye for theatre with universally-relatable themes staged in daring and interesting ways.</p>
+							<h4>Current Projects include:</h4>
+							<p><i>The Wind of Heaven</i> (Finborough Theatre, London) with Weighed In Productions.
+								<br><i> The Respectable Prostitute</i> (The Playground Theatre, London) with Lisa Forrell.
+								<br><i>NEON</i> (R&D) with Patrick Swain.</p>
 
-								<a target="_blank" href="mailto:jonathan@taylorhq.com"><button>Email Me</button>
+
+<h4>Previous Projects include:</h4>
+<p><i>The Remarkables</i> (Greenside @ Nicholson Square, Edinburgh Fringe Festival 2019) with Shotgun Theatre.<br>
+	 <i>NEON</i> (The Lion and Unicorn Theatre, London) with Caged Bird Theatre.</p>
+
+
+<h4>As Assistant Producer:</h4>
+<p><i>The Claim</i> (Roundabout @ Summerhall, Edinburgh Fringe Festival 2019) with James Quaife Productions.<br>
+	<i>Exeter Fringe Festival</i> (Exeter Phoenix & Exeter Barnfield, 2019).
+</p>
+
+								<a target="_blank" href="mailto:jonathan@taylorproductions.co.uk" class="button alt">Email Me</a>
 						</div>
 					</div>
 				</div>
 			</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<div class="container">
-						<ul class="icons">
-							<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="mailto:jonathan@taylorhq.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-					</div>
-					<div class="copyright">
-						&copy; Jonathan Taylor 2019<br> All rights reserved.
-					</div>
-				</footer>
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					</ul>
+				</div>
+				<div class="copyright">
+					&copy; Jonathan Taylor Productions 2019<br><br>
+					Jonathan Taylor is a sole trader trading as <i>Jonathan Taylor Productions</i><br>
+					<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
+					<br>
+					<br>
+					<a href="http://jonathan.taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
+
+				</div>
+			</footer>
 
 			<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
