--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jonathan Taylor - Producer</title>
+		<title>Jonathan Taylor Productions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,6 +24,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="projects.html">Projects</a></li>
 					<!--<li><a href="elements.html">Producing</a></li>
 					<li><a href="elements.html">Photography & Design</a></li>\
 					<li><a href="elements.html">Technical Experience</a></li>-->
@@ -36,141 +37,72 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Experience with Award-Winning touring productions</a></p>
-							<h2>Theatre Producer</h2>
 						</header>
+					</div>
+				</article>
+
+				<article>
+					<img src="images/slide03.png"  alt="" />
+					<div class="inner">
+
 					</div>
 				</article>
 				<article>
 					<img src="images/slide02.png" alt="" />
 					<div class="inner">
-						<header>
-							<p>Experienced in Adobe Creative Software including Photoshop & Premiere Pro.</p>
-							<h2>Graphic Designer</h2>
-						</header>
+
 					</div>
 				</article>
 				<article>
-					<img src="images/slide06.jpg"  alt="" />
+					<img src="images/slide06.png"  alt="" />
 					<div class="inner">
-						<header>
-							<p>Experienced in EOS Family Lighting and QLab audio software.</p>
-							<h2>Technician</h2>
-						</header>
+
 					</div>
 				</article>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="wrapper style2">
-				<div class="inner">
-					<div class="grid-style">
 
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/pic02.png" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Award-Winning Touring Production</p>
-										<h2>NEON</h2>
-									</header>
-									<p style="text-align: justify;">In 2018, NEON performed at The Lion and Unicorn Theatre (London) following a preview tour to Nottingham New Theatre and Roborough Studios (Exeter). It was the debut production of Caged Bird Theatre, where Jonathan is an Associate Producer. </p>
-									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/pic03.png" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>5-Star Touring Production</p>
-										<h2>HAMLET</h2>
-									</header>
-									<p style="text-align: justify;">In 2019 and in collaboration with Exeter Shakespeare Society, Jonathan produced a touring production of Hamlet. Touring to the Stratford Play House (Stratford-Upon-Avon), using lighting and projection to its extreme.</p>
-									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/pic01.png" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Musical Theatre Society</p>
-										<h2>Shotgun Theatre</h2>
-									</header>
-									<p style="text-align: justify;">While at University, Jonathan was Vice-President (2017/18) and President (2018/19) of Shotgun Theatre, a musical theatre society on campus. Priding itself on inclusivity and showcasing new work, Jonathan oversaw over 8 productions including two shows at Exeter Phoenix, a professional theatre in the heart of the City of Exeter.</p>
-									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/pic04.png" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Lighting Designer at Exeter Northcott</p>
-										<h2>Oklahoma!</h2>
-									</header>
-									<p style="text-align: justify;">In January 2019, Jonathan was the Lighting Designer for Exeter University Footlights' production of Oklahoma! In the Exeter Northcott, Jonathan oversaw the delivery of the director's vision while co-ordinating with the professional venue. The design was completed using Capture and EOS Family software, enabling an easy get-in and programming process.</p>
-									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
 
 			<section id="two" class="wrapper style2">
 				<div class="inner">
 					<div class="box">
 						<div style="text-align: center" class="content">
 								<h2>Credits Include</h2>
-							<p><i>The Remarkables</i>, Edinburgh Fringe Festival, Producer (2019, Shotgun Theatre).<br>
+
+							<p><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
+								<br><i>The Remarkables</i>, Edinburgh Fringe Festival, Producer (2019, Shotgun Theatre).<br>
 								<br><i>The Claim</i>, Edinburgh Fringe Festival, Assistant Producer (2019, James Quaife Productions).<br>
 								<br><i>Exeter Fringe Festival</i>, Assistant Producer (2019).<br>
 								<br><i>Spring Awakening</i>, Sound Designer (2019, Shotgun Theatre).<br>
 								<br><i>HAMLET</i>, Stratford Play House, Producer (2019, Exeter Shakespeare Society).<br>
 								<br><i>NEON</i>, The Lion and Unicorn, Producer (2018, Caged Bird Theatre).<br>
 								<br><i>Little Shop of Horrors</i>, Exeter Phoenix, Producer (2018, Shotgun Theatre).<br>
-								<br><i>Oklahoma!</i>, Exeter Northcott, Lighting Designer (2018, Exeter University Footlights).
+								<br><i>Oklahoma!</i>, Exeter Northcott, Lighting Designer (2018, Exeter University Footlights).<br>
+								<br>
+								<a target="_blank" href="projects.html" class="button alt">View Projects</a>
 						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="mailto:jonathan@taylorhq.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Jonathan Taylor 2019<br> All rights reserved.
-				</div>
-			</footer>
+		<footer id="footer">
+			<div class="container">
+				<ul class="icons">
+					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+			</div>
+			<div class="copyright">
+				&copy; Jonathan Taylor Productions 2019<br><br>
+				Jonathan Taylor is a sole trader trading as <i>Jonathan Taylor Productions</i><br>
+				<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
+				<br>
+				<br>
+				<a href="http://jonathan.taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
+
+			</div>
+		</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
