--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/slide01.png" alt="" />
 					<div class="inner">
 						<header>
 						</header>
