--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
 				<br>
 				<br>
-				<a href="http://jonathan.taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
+				<a href="http://taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
 
 			</div>
 		</footer>
