--- a/projects.html
+++ b/projects.html
@@ -148,7 +148,7 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 					<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
 					<br>
 					<br>
-					<a href="http://jonathan.taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
+					<a href="http://taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
 
 				</div>
 			</footer>
