--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,13 @@
 	</head>
 	<body>
 
+
+
+
+
+
+
+
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo"><a href="index.html">Jonathan <span>Taylor</span></a></div>
@@ -81,6 +88,30 @@
 </p>
 
 								<a target="_blank" href="mailto:jonathan@taylorproductions.co.uk" class="button alt">Email Me</a>
+
+								<div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v4.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_GB/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your customer chat code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="102606401149318"
+  theme_color="#000000">
+      </div>
 						</div>
 					</div>
 				</div>
