--- a/contact.html
+++ b/contact.html
@@ -121,8 +121,8 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li><li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li><li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+
 					</ul>
 				</div>
 				<div class="copyright">
@@ -130,7 +130,7 @@
 					<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
 					<br>
 					<br>
-					<a href="http://taylorproductions.co.uk" target="_blank">jonathan.taylorproductions.co.uk</a>
+					<a href="http://taylorproductions.co.uk" target="_blank">taylorproductions.co.uk</a>
 
 				</div>
 			</footer>
