--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@ theme_color="#000000">
 		<footer id="footer">
 			<div class="container">
 				<ul class="icons">
-					<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li><li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li><li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 			</div>
 			<div class="copyright">
