--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 
+		<!-- MailerLite Universal -->
+		<script>
+		(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+		var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+		f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+		var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+		_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+		var ml_account = ml('accounts', '1720044', 'x9x3x8h8q2', 'load');
+		</script>
+		<!-- End MailerLite Universal -->
+
 
 	</head>
 	<body>
@@ -45,6 +57,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="projects.html">Projects</a></li>
+					<li><a href="#" onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')">Get Updates</a></li>
 					<!--<li><a href="elements.html">Producing</a></li>
 					<li><a href="elements.html">Photography & Design</a></li>\
 					<li><a href="elements.html">Technical Experience</a></li>-->
@@ -100,6 +113,14 @@
 								<br><i>Oklahoma!</i>, Exeter Northcott, Lighting Designer (2018, Exeter University Footlights).<br>
 								<br>
 								<a target="_blank" href="projects.html" class="button alt">View Projects</a>
+
+<br>
+<br>
+<a onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')" class="button alt">Get Updates
+
+</button></a>
+
+
 						</div>
 					</div>
 				</div>
@@ -130,78 +151,9 @@ theme_color="#000000">
 		</div>
 	</div>
 </div>
+
+
 			</section>
-
-<section id="three" class="wrapper style4">
-
-<div id="mlb2-1553230" class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-1553230">
-  <div class="ml-form-align-center ">
-    <div class="ml-form-embedWrapper embedForm">
-      <div class="ml-form-embedBody ml-form-embedBodyDefault row-form">
-        <div class="ml-form-embedContent" style=" ">
-          <h4>Updates</h4>
-          <p>Signup for news about upcoming productions and investment opportunities.</p>
-        </div>
-        <form class="ml-block-form" action="https://app.mailerlite.com/webforms/submit/w7j3i5" data-code="w7j3i5" method="post" target="_blank">
-          <div class="ml-form-formContent">
-            <div class="ml-form-fieldRow ml-last-item">
-              <div class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
-                <input type="email" class="form-control" data-inputmask="" name="fields[email]" value="" placeholder="Email">
-              </div>
-            </div>
-          </div>
-          <div class="ml-form-checkboxRow ml-validate-required">
-            <label class="checkbox">
-
-                    <input type="checkbox">
-
-                    <div class="label-description">
-
-                      <p>Opt in to receive news and updates.</p>
-
-                    </div>
-
-                  </label>
-          </div>
-          <style type="text/css">
-          
-          </style>
-          <div class="ml-form-recaptcha ml-validate-required">
-            <script src="https://www.google.com/recaptcha/api.js"></script>
-            <div class="g-recaptcha" data-sitekey="6Lf1KHQUAAAAAFNKEX1hdSWCS3mRMv4FlFaNslaD"></div>
-          </div>
-          <input type="hidden" name="ml-submit" value="1">
-          <div class="ml-form-embedSubmit">
-            <button type="submit" class="primary">Subscribe</button>
-            <button disabled="disabled" style="display: none;" type="button" class="loading">
-
-                  <div class="ml-form-embedSubmitLoad"><div></div><div></div><div></div><div></div></div>
-
-                </button>
-          </div>
-        </form>
-      </div>
-      <div class="ml-form-successBody row-success" style="display: none">
-        <div class="ml-form-successContent">
-          <h4>Thank you!</h4>
-          <p>You have successfully joined our subscriber list.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  function ml_webform_success_1553230() {
-      var $ = ml_jQuery || jQuery;
-      $('.ml-subscribe-form-1553230 .row-success').show();
-      $('.ml-subscribe-form-1553230 .row-form').hide();
-    }
-</script>
-<img src="https://track.mailerlite.com/webforms/o/1553230/w7j3i5?v253251d9ecd93b8e74c12a37f72e896f" width="1" height="1" style="max-width: 1px; max-height: 1px; visibility: hidden; padding: 0; margin: 0; display: block;" border="0">
-<script src="https://static.mailerlite.com/js/w/webforms.min.js?v253251d9ecd93b8e74c12a37f72e896f" type="text/javascript"></script>
-
-
-</section>
 
 		<!-- Footer -->
 		<footer id="footer">
@@ -220,6 +172,10 @@ theme_color="#000000">
 				<a href="http://taylorproductions.co.uk" target="_blank">taylorproductions.co.uk</a>
 
 			</div>
+
+
+
+
 		</footer>
 
 		<!-- Scripts -->
