Added Company Information

--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@ theme_color="#000000">
 				<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
 				<br>
 				<br>
-				<a href="http://taylorproductions.co.uk" target="_blank">taylorproductions.co.uk</a>
-
+				Jonathan Taylor Productions Ltd is<br> a company registered in England and Wales
+				<br>
+				<br>
+				Company Number: 12283923
 			</div>
 
 
