--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,9 @@
 							<p>Jonathan Taylor is a freelance theatre producer, with an eye for theatre with universally-relatable themes staged in daring and interesting ways.</p>
 							<h4>Current Projects include:</h4>
 							<p><i>The Wind of Heaven</i> (Finborough Theatre, London) with Weighed In Productions.
-								<br><i> The Respectable Prostitute</i> (The Playground Theatre, London) with Lisa Forrell.
-								<br><i>NEON</i> (R&D) with Patrick Swain.</p>
+								<br><i>Unannounced Revival</i> (The Playground Theatre, London and The Belgrade Theatre, Coventry).
+								<br><i>Unannounced New Writing</i> with Patrick Swain.</p>
+								<br><i>Unannounced Adaptation</i> (UK Tour, 2021)</p>
 
 
 <h4>Previous Projects include:</h4>
