Correction to bio

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 					<div class="box">
 						<div style="text-align: center" class="content">
 							<h2>Jonathan Taylor</h2>
-							<p>Jonathan Taylor is a freelance theatre producer, with an eye for theatre with universally-relatable themes staged in daring and interesting ways.</p>
+							<p>Jonathan Taylor is a freelance Theatre Producer, with an eye for subtle themes staged in daring and interesting ways.</p>
 							<h4>Current Projects include:</h4>
 							<p><i>The Wind of Heaven</i> (Finborough Theatre, London) with Weighed In Productions.
 								<br><i>Unannounced Revival</i> (The Playground Theatre, London and The Belgrade Theatre, Coventry).
