--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,8 @@
 	<i>Exeter Fringe Festival</i> (Exeter Phoenix & Exeter Barnfield, 2019).
 </p>
 
+<p>Jonathan is a proud alumni of <a href="https://www.stageone.uk.com/">Stage One</a></p>
+
 								<a target="_blank" href="mailto:jonathan@taylorproductions.co.uk" class="button alt">Email Me</a>
 
 								<div id="fb-root"></div>
