--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 							<p>Jonathan Taylor is a freelance Theatre Producer, with an eye for subtle themes staged in daring and interesting ways.</p>
 							<h4>Current Projects include:</h4>
 							<p><i>The Wind of Heaven</i> (Finborough Theatre, London) with Weighed In Productions.
-								<br><i>Unannounced Revival</i> (The Playground Theatre, London and The Belgrade Theatre, Coventry).
+								<br><i>Unannounced Revival</i> (The Playground Theatre, London & The Belgrade Theatre, Coventry).
 								<br><i>Unannounced New Writing</i> with Patrick Swain.
 								<br><i>Unannounced Adaptation</i> (UK Tour, 2021)</p>
 
