--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<br><i>Little Shop of Horrors</i>, Exeter Phoenix, Producer (2018, Shotgun Theatre).<br>
 								<br><i>Oklahoma!</i>, Exeter Northcott, Lighting Designer (2018, Exeter University Footlights).<br>
 								<br>
-								<a target="_blank" href="projects.html" class="button alt">View Projects</a>
+								<a href="projects.html" class="button alt">View Projects</a>
 
 <br>
 <br>
