--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<p>The First London Production in 75 Years.</p>
+									<p>The First London Production in 75 Years</p>
 									<h2>The Wind of Heaven</h2>
 								</header>
 								<p style="text-align: justify;">In the wake of vast social inequality and a mismanaged war, one small community rediscovers its lost faith, with startling consequences for the village, and the world beyond… <br> <br>
@@ -93,7 +93,40 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 							</div>
 						</div>
 					</div>
-
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="images/pic07.png" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>God is back... and she has a lot to say!</p>
+									<h2>Act Of God</h2>
+								</header>
+								<p style="text-align: justify;">After many millennia, and in just 90 minutes, God (award-winning comedian Zoe Lyons as seen on Mock The Week and Celebrity Masterchef) assisted by her devoted angels Michael (Matt Tedford, aka ‘Margaret Thatcher Queen of Soho’) and Gabriel (Tom Bowen, Johnny Castle in ‘Dirty Dancing the Musical’) will answer some of the deepest questions that have plagued mankind since creation.</p>
+								<footer class="align-center">
+									<a href="https://www.thevaults.london/an-act-of-god" target="_blank" class="button alt">Book Tickets</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="images/pic06.png" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>The Great British pantomime, staged in a traditional English pub</p>
+									<h2>Cinderella</h2>
+								</header>
+								<p style="text-align: justify;">This unique twist on the Cinderella story sees all the characters you know, love and hate colliding in a local boozer, where the audience are welcomed to the heart of the action to witness pints spilled, mates pulled and hearts poured out on the karaoke.</p>
+								<footer class="align-center">
+									<a href="https://www.thevaults.london/cinderella" target="_blank" class="button alt">Book Tickets</a>
+								</footer>
+							</div>
+						</div>
+					</div>
 
 					<div>
 						<div class="box">
