--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,10 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 									<p>God is back... and she has a lot to say!</p>
 									<h2>Act Of God</h2>
 								</header>
-								<p style="text-align: justify;">After many millennia, and in just 90 minutes, God (award-winning comedian Zoe Lyons as seen on Mock The Week and Celebrity Masterchef) assisted by her devoted angels Michael (Matt Tedford, aka ‘Margaret Thatcher Queen of Soho’) and Gabriel (Tom Bowen, Johnny Castle in ‘Dirty Dancing the Musical’) will answer some of the deepest questions that have plagued mankind since creation.</p>
+								<p style="text-align: justify;">After many millennia, and in just 90 minutes, God (award-winning comedian Zoe Lyons) assisted by her devoted angels Michael and Gabriel will answer some of the deepest questions that have plagued mankind since creation.
+									<br><br>
+								In this very alternative Christmas message a dissatisfied deity, weary of the original Ten Commandments, delivers a new version: a fresh set of rules for the modern world. This sinfully funny comedy delivers a new meaning to divine intervention as The “One” gives the first and last word on everything mankind has wrought on the planet.
+								</p>
 								<footer class="align-center">
 									<a href="https://www.thevaults.london/an-act-of-god" target="_blank" class="button alt">Book Tickets</a>
 								</footer>
@@ -117,10 +120,12 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<p>The Great British pantomime, staged in a traditional English pub</p>
+									<p>The Great British pantomime</p>
 									<h2>Cinderella</h2>
 								</header>
-								<p style="text-align: justify;">This unique twist on the Cinderella story sees all the characters you know, love and hate colliding in a local boozer, where the audience are welcomed to the heart of the action to witness pints spilled, mates pulled and hearts poured out on the karaoke.</p>
+								<p style="text-align: justify;">Staged in an English Pub, this unique twist on the Cinderella story sees all the characters you know, love and hate colliding in a local boozer, where the audience are welcomed to the heart of the action to witness pints spilled, mates pulled and hearts poured out on the karaoke.
+								<br><br>
+							Crammed with live music, mayhem and a touch of midnight magic, Cinderella will have you dancing in the aisles and laughing your baubles off. Think The Royle Family meets Elf, in a bespoke pub theatre within The Vaults complex beneath Waterloo station.</p>
 								<footer class="align-center">
 									<a href="https://www.thevaults.london/cinderella" target="_blank" class="button alt">Book Tickets</a>
 								</footer>
