--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 								<h2>Credits Include</h2>
 
 							<p><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
+								<br><i>Act of God</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
+								<br><i>Cinderella</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
 								<br><i>The Remarkables</i>, Edinburgh Fringe Festival, Producer (2019, Shotgun Theatre).<br>
 								<br><i>The Claim</i>, Edinburgh Fringe Festival, Assistant Producer (2019, James Quaife Productions).<br>
 								<br><i>Exeter Fringe Festival</i>, Assistant Producer (2019).<br>
