--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 							<div class="content">
 								<header class="align-center">
 									<p>God is back... and she has a lot to say</p>
-									<h2>Act Of God</h2>
+									<h2>An Act Of God</h2>
 								</header>
 								<p style="text-align: justify;">After many millennia, and in just 90 minutes, God (award-winning comedian Zoe Lyons) assisted by her devoted angels Michael and Gabriel will answer some of the deepest questions that have plagued mankind since creation.
 									<br><br>
