--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,17 @@
 		var ml_account = ml('accounts', '1720044', 'x9x3x8h8q2', 'load');
 		</script>
 		<!-- End MailerLite Universal -->
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153654723-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153654723-1');
+</script>
+
 	</head>
 	<body>
 
