--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 						<div style="text-align: center" class="content">
 								<h2>Credits Include</h2>
 
-							<p><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
+							<p>
+								<i>The Respectable Prostitute</i>, The Playground Theatre, Producer (2020, Jonathan Taylor Productions)
+								<br><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
 								<br><i>An Act of God</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
 								<br><i>Cinderella</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
 								<br><i>The Remarkables</i>, Edinburgh Fringe Festival, Producer (2019, Shotgun Theatre).<br>
