--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<h2>Credits Include</h2>
 
 							<p>
-								<i>The Respectable Prostitute</i>, The Playground Theatre, Producer (2020, Jonathan Taylor Productions)
+								<i>The Respectable Prostitute</i>, The Playground Theatre, Producer (2020, Jonathan Taylor Productions)<br>
 								<br><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
 								<br><i>An Act of God</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
 								<br><i>Cinderella</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
