--- a/projects.html
+++ b/projects.html
@@ -91,15 +91,16 @@
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<p>A new revival of Jean-Paul Satre's 1947 play</p>
+									<p>The story that sparked a major international film</p>
 									<h2>The Respectable Prostitute</h2>
 								</header>
 								<p style="text-align: justify;">
-									1940s America is hot, steamy, and wild. Neon signs fill the streets with light while a sinister air blows and powerful people spread false truth for their personal ambition.
-<br>
-									In this un-politically correct play about lies, fake news, racism and other daily affronts in the southern United States, an innocent prostitute tries to tell the truth while an influential senator tries to convince her otherwise.
-<br><br>
-									The first UK production in 1947 was directed by Peter Brook while a film adaptation, <i>La Putain respectueuse</i>, was released in 1952.
+									The story that sparked a major international film, Jean-Paul Sartre’s play returns to the stage after nearly 75 years.<br><br>
+
+1940s America is hot, steamy, and wild. Neon signs fill the streets with light while a sinister air blows. Powerful people spread false truth for their personal ambition.<br><br>
+
+In the midst of lies, fake news, racism and other daily affronts in the southern United States, an innocent prostitute just wants to tell the truth while an influential senator tries to convince her otherwise.
+
 <br><br>
 
 								</p>
@@ -122,6 +123,7 @@
 								<p style="text-align: justify;">In the wake of vast social inequality and a mismanaged war, one small community rediscovers its lost faith, with startling consequences for the village, and the world beyond… <br> <br>
 
 A parable about healing the wounds inflicted by a national trauma, The Wind of Heaven was first produced in the West End in April 1945, just three weeks before the end of the Second World War in Europe, starring Emlyn Williams himself.<br> <br> It now receives its first London production in nearly 75 years at the Finborough Theatre.
+<br><br>
 </p>
 								<footer class="align-center">
 									<a href="https://www.finboroughtheatre.co.uk/productions/2019/the-wind-of-heaven.php" target="_blank" class="button alt">Learn More</a>
