--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@ In the midst of lies, fake news, racism and other daily affronts in the southern
 
 								</p>
 								<footer class="align-center">
-									<a href="https://theplaygroundtheatre.london/whats-on/" target="_blank" class="button alt">Tickets on sale soon</a>
+									<a href="tickets.html" class="button alt">Buy Now</a>
 								</footer>
 							</div>
 						</div>
