--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Jonathan Taylor Productions</title>
+		<title>Jonathan Taylor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -27,6 +23,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
+
 		<!-- MailerLite Universal -->
 		<script>
 		(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -49,34 +46,30 @@
   gtag('config', 'UA-153654723-1');
 </script>
 
+
+
 	</head>
 	<body>
 
-
-
-
-
-
-
-
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Jonathan <span>Taylor</span></a></div>
+				<div class="logo"><a href="index">Jonathan <span>Taylor</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="projects.html">Projects</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="contact">Contact</a></li>
+					<li><a href="projects">Projects</a></li>
 					<li><a href="#" onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')">Get Updates</a></li>
-					<!--<li><a href="elements.html">Producing</a></li>
-					<li><a href="elements.html">Photography & Design</a></li>\
-					<li><a href="elements.html">Technical Experience</a></li>-->
+					<!--<li><a href="elements ">Producing</a></li>
+					<li><a href="elements ">Photography & Design</a></li>\
+					<li><a href="elements ">Technical Experience</a></li>-->
 				</ul>
 			</nav>
+
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
