--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Jonathan Taylor Productions</title>
+		<title>Jonathan Taylor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,20 +53,20 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Jonathan <span>Taylor</span></a></div>
+				<div class="logo"><a href="index">Jonathan <span>Taylor</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="projects.html">Projects</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="contact">Contact</a></li>
+					<li><a href="projects">Projects</a></li>
 					<li><a href="#" onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')">Get Updates</a></li>
-					<!--<li><a href="elements.html">Producing</a></li>
-					<li><a href="elements.html">Photography & Design</a></li>\
-					<li><a href="elements.html">Technical Experience</a></li>-->
+					<!--<li><a href="elements ">Producing</a></li>
+					<li><a href="elements ">Photography & Design</a></li>\
+					<li><a href="elements ">Technical Experience</a></li>-->
 				</ul>
 			</nav>
 
@@ -114,7 +109,10 @@
 								<h2>Credits Include</h2>
 
 							<p>
-								<i>The Respectable Prostitute</i>, The Playground Theatre, Producer (2020, Jonathan Taylor Productions)<br>
+								<i>Mamma Mia! The Party</i>, The O2, Marketing Officer (Present, MM! The Party Ltd & U-Live)<br>
+								<br><i>Be More Chill - The Musical</i>, Shaftesbury Theatre, Programming & Marketing Executive (2021, BKL Productions)<br>
+								<br><i>Love Letters</i>, Theatre Royal Haymarket, Programming & Marketing Executive (2021, BKL Productions)<br>
+								<br><i>Heathers the Musical</i>, Theatre Royal Haymarket & UK Tour, Programming & Marketing Executive (2021, BKL Productions)<br>
 								<br><i>The Wind of Heaven</i>, Finborough Theatre, Producer (2019, Weighed In Productions).<br>
 								<br><i>An Act of God</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
 								<br><i>Cinderella</i>, The Vaults, Assistant Producer (2019, Seabright Productions).<br>
@@ -127,7 +125,7 @@
 								<br><i>Little Shop of Horrors</i>, Exeter Phoenix, Producer (2018, Shotgun Theatre).<br>
 								<br><i>Oklahoma!</i>, Exeter Northcott, Lighting Designer (2018, Exeter University Footlights).<br>
 								<br>
-								<a href="projects.html" class="button alt">View Projects</a>
+								<a href="projects" class="button alt">View Projects</a>
 
 <br>
 <br>
@@ -174,21 +172,13 @@ theme_color="#000000">
 		<footer id="footer">
 			<div class="container">
 				<ul class="icons">
-					<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 			</div>
-			<div class="copyright">
-				&copy; Jonathan Taylor Productions 2019<br><br>
-				<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
-				<br>
-				<br>
-				Jonathan Taylor Productions Ltd is<br> a company registered in England and Wales
-				<br>
-				<br>
-				Company Number: 12283923
-			</div>
+			<a onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')" class="button alt">Get Updates
+
+			</button></a>
 
 
 
