--- a/projects.html
+++ b/projects.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Jonathan Taylor Productions</title>
+		<title>Jonathan Taylor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -27,6 +23,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
+
 		<!-- MailerLite Universal -->
 		<script>
 		(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
@@ -49,27 +46,30 @@
   gtag('config', 'UA-153654723-1');
 </script>
 
+
+
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Jonathan <span>Taylor</span></a></div>
+				<div class="logo"><a href="index">Jonathan <span>Taylor</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="projects.html">Projects</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="contact">Contact</a></li>
+					<li><a href="projects">Projects</a></li>
 					<li><a href="#" onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')">Get Updates</a></li>
-					<!--<li><a href="elements.html">Producing</a></li>
-					<li><a href="elements.html">Photography & Design</a></li>\
-					<li><a href="elements.html">Technical Experience</a></li>-->
+					<!--<li><a href="elements ">Producing</a></li>
+					<li><a href="elements ">Photography & Design</a></li>\
+					<li><a href="elements ">Technical Experience</a></li>-->
 				</ul>
 			</nav>
+
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
@@ -84,28 +84,51 @@
 		<section id="one" class="wrapper style2">
 			<div class="inner">
 				<div class="grid-style">
+
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/p08.png" alt="" />
+								<img src="images/pic09.png" alt=""/>
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<p>The story that sparked a major international film</p>
-									<h2>The Respectable Prostitute</h2>
+									<p>Marketing for theatrical experience</p>
+									<h2>Mamma Mia! The Party</h2>
 								</header>
 								<p style="text-align: justify;">
-									The story that sparked a major international film, Jean-Paul Sartre’s play returns to the stage after nearly 75 years.<br><br>
+									In-house marketing contact for the whole marketing mix, coordinating with production staff and third-party agencies to deliver out-of-home advertising campaigns, digital campaigns, and organic social media.<br>
+									<br>
+									Managing a 52k+ strong mailing list and designing HTML emails (with CSS customisation) for distribution.<br><br>
 
-1940s America is hot, steamy, and wild. Neon signs fill the streets with light while a sinister air blows. Powerful people spread false truth for their personal ambition.<br><br>
 
-In the midst of lies, fake news, racism and other daily affronts in the southern United States, an innocent prostitute just wants to tell the truth while an influential senator tries to convince her otherwise.
-
-<br><br>
-
-								</p>
+									<br><br><br><br>
+</p>
 								<footer class="align-center">
-									<a href="tickets.html" class="button alt">Buy Now</a>
+									<a href="https://mammamiatheparty.co.uk" target="_blank" class="button alt">Learn More</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="images/pic08.png" alt=""/>
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>Programming & Marketing in theatre</p>
+									<h2>Bill Kenwright Ltd</h2>
+								</header>
+								<p style="text-align: justify;">
+									Maintained the administrative elements of the Programming department and oversaw all marketing operations for the shows across West End (Heathers the Musical, Be More Chill, Love Letters) and UK Tours (Blood Brothers, Heathers the Musical, The Cat and The Canary).<br>
+									<br>
+									Managed marketing schedules for touring shows, with an average of 80-90 touring weeks per year.<br><br>
+									This involves coordinating with venue staff to book activity, provide assets, and oversee the budget.
+									<br><br>
+</p>
+								<footer class="align-center">
+									<a href="https://kenwright.com" target="_blank" class="button alt">Learn More</a>
 								</footer>
 							</div>
 						</div>
