Updated Contact Page

--- a/contact.html
+++ b/contact.html
@@ -86,29 +86,9 @@
 					<div class="box">
 						<div style="text-align: center" class="content">
 							<h2>Jonathan Taylor</h2>
-							<p>Jonathan Taylor is a freelance Theatre Producer, with an eye for subtle themes staged in daring and interesting ways.</p>
-							<h4>Current Projects include:</h4>
-							<p><i>The Wind of Heaven</i> (Finborough Theatre, London) with Weighed In Productions.
-								<br><i>Cinderella</i> (The Vaults, London) as Assistant Producer with Seabright Productions.
-								<br><i>An Act of God</i> (The Vaults, London) as Assistant Producer with Seabright Productions.
-								<br><i>Unannounced Revival</i> (The Playground Theatre, London & The Belgrade Theatre, Coventry).
-								<br><i>Unannounced New Writing</i> with Patrick Swain.
-								<br><i>Unannounced Adaptation</i> (UK Tour, 2021)</p>
+							
 
-
-<h4>Previous Projects include:</h4>
-<p><i>The Remarkables</i> (Greenside @ Nicholson Square, Edinburgh Fringe Festival 2019) with Shotgun Theatre.<br>
-	 <i>NEON</i> (The Lion and Unicorn Theatre, London) with Caged Bird Theatre.</p>
-
-
-<h4>As Assistant Producer:</h4>
-<p><i>The Claim</i> (Roundabout @ Summerhall, Edinburgh Fringe Festival 2019) with James Quaife Productions.<br>
-	<i>Exeter Fringe Festival</i> (Exeter Phoenix & Exeter Barnfield, 2019).
-</p>
-
-<p>Jonathan is a proud alumni of <a href="https://www.stageone.uk.com/">Stage One</a></p>
-
-								<a target="_blank" href="mailto:jonathan@taylorproductions.co.uk" class="button alt">Email Me</a>
+								<a target="_blank" href="mailto:jonathan@jonathantaylor.info" class="button alt">Email Me</a>
 
 								<div id="fb-root"></div>
       <script>
@@ -139,29 +119,22 @@
 			</section>
 
 			<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Jonathan Taylor Productions 2019<br><br>
-					<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
-					<br>
-					<br>
-					Jonathan Taylor Productions Ltd is<br> a company registered in England and Wales
-					<br>
-					<br>
-					Company Number: 12283923
-				</div>
+			<!-- Footer -->
+		<footer id="footer">
+			<div class="container">
+				<ul class="icons">
+					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+			</div>
+			<a onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')" class="button alt">Get Updates
+
+			</button></a>
 
 
 
 
-			</footer>
+		</footer>
 
 			<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
