--- a/projects.html
+++ b/projects.html
@@ -289,29 +289,22 @@ theme_color="#000000">
 		</section>
 
 			<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="https://facebook.com/JonathanTaylorProductions" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Jonathan Taylor Productions 2019<br><br>
-					<a href="mailto:jonathan@taylorproductions.co.uk">jonathan@taylorproductions.co.uk</a><br>
-					<br>
-					<br>
-					Jonathan Taylor Productions Ltd is<br> a company registered in England and Wales
-					<br>
-					<br>
-					Company Number: 12283923
-				</div>
+			<!-- Footer -->
+		<footer id="footer">
+			<div class="container">
+				<ul class="icons">
+					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+			</div>
+			<a onclick="ml_account('webforms', '1553230', 'w7j3i5', 'show')" class="button alt">Get Updates
+
+			</button></a>
 
 
 
 
-			</footer>
+		</footer>
 
 			<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
