--- a/contact.html
+++ b/contact.html
@@ -94,20 +94,23 @@
 			</section>
 
 			<!-- Footer -->
-			<!-- Footer -->
-		<footer id="footer">
-			<div class="container">
-				<ul class="icons">
-					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-				</ul>
-			</div>
-
-
-
-
-
-		</footer>
+			<footer id="footer">
+				<div class="container">
+					<ul class="icons">
+						<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="www.linkedin.com/in/jonathan-taylor-info" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+	
+						
+	
+					</ul>
+				</div>
+	
+	
+	
+	
+	
+			</footer>
 
 			<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
