--- a/projects.html
+++ b/projects.html
@@ -272,6 +272,10 @@ A parable about healing the wounds inflicted by a national trauma, The Wind of H
 				<ul class="icons">
 					<li><a href="https://twitter.com/JonathanTaylorP" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="mailto:jonathan@taylorproductions.co.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="www.linkedin.com/in/jonathan-taylor-info" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+
+					
+
 				</ul>
 			</div>
 
